packages/dartcv/src/dartcv/stitching/stitching.h

void cv_Stitcher_close(StitcherPtr stitcher);
CvStatus* cv_Stitcher_composePanorama(Stitcher self, Mat rpano, int* rval, CvCallback_0 callback);
CvStatus* cv_Stitcher_component(Stitcher self, VecI32* rval, CvCallback_0 callback);
// Camera parameters estimated for every stitched image, assigned into `rval`,
// which must come from cv_VecCameraParams_new.
CvStatus* cv_Stitcher_cameras(Stitcher self, VecCameraParams* rval, CvCallback_0 callback);
// Convenience constructor equivalent to cv_WarperCreator_create followed by
// cv_WarperCreator_createWarper.
CvStatus* cv_RotationWarper_create(int type, float a, float b, float scale, RotationWarper* rval);
void cv_RotationWarper_close(RotationWarperPtr self);
float cv_RotationWarper_get_scale(RotationWarper self);
void cv_RotationWarper_set_scale(RotationWarper self, float val);
CvStatus* cv_RotationWarper_warpPoint(
    RotationWarper self, CvPoint2f pt, Mat K, Mat R, CvPoint2f* rval, CvCallback_0 callback
);
CvStatus* cv_RotationWarper_warpPointBackward(
    RotationWarper self, CvPoint2f pt, Mat K, Mat R, CvPoint2f* rval, CvCallback_0 callback
);
CvStatus* cv_RotationWarper_buildMaps(
    RotationWarper self,
    CvSize src_size,
    Mat K,
    Mat R,
    Mat xmap,
    Mat ymap,
    CvRect* rval,
    CvCallback_0 callback
);
CvStatus* cv_RotationWarper_warp(
    RotationWarper self,
    Mat src,
    Mat K,
    Mat R,
    int interp_mode,
    int border_mode,
    Mat dst,
    CvPoint* rval,
    CvCallback_0 callback
);
CvStatus* cv_RotationWarper_warpBackward(
    RotationWarper self,
    Mat src,
    Mat K,
    Mat R,
    int interp_mode,
    int border_mode,
    CvSize dst_size,
    Mat dst,
    CvCallback_0 callback
);
CvStatus* cv_RotationWarper_warpRoi(
    RotationWarper self, CvSize src_size, Mat K, Mat R, CvRect* rval, CvCallback_0 callback
);
// Every setter below replaces one stage of the stitching pipeline; each getter
// hands back a new handle sharing ownership with the stitcher, which the caller
// releases with the matching _close. Mixing homography-model and affine-model
// stages produces meaningless results — see the OpenCV stitching docs.

// --- features finder (cv::Feature2D) ---
// Built here rather than taken from the features2d module: dartcv keeps module
// bindings independent, and there is no shared C handle for cv::Ptr<Feature2D>.
CvStatus* cv_FeaturesFinder_create(int type, int nfeatures, FeaturesFinder* rval);
void cv_FeaturesFinder_close(FeaturesFinderPtr self);
// --- features matcher (cv::detail::FeaturesMatcher) ---
// `range_width` is only read by STITCHING_MATCHER_BEST_OF_2_NEAREST_RANGE and
// `full_affine` only by STITCHING_MATCHER_AFFINE_BEST_OF_2_NEAREST.
//
// `matches_confidence_thresh` zeroes the confidence of any pair scoring above it,
// OpenCV's guard against matching two near-identical images. Only
// STITCHING_MATCHER_BEST_OF_2_NEAREST takes it; the other two have no
// constructor parameter for it and always use OpenCV's default of 3.
CvStatus* cv_FeaturesMatcher_create(
    int type,
    int range_width,
    bool full_affine,
    bool try_use_gpu,
    float match_conf,
    int num_matches_thresh1,
    int num_matches_thresh2,
    double matches_confidence_thresh,
    FeaturesMatcher* rval
);
void cv_FeaturesMatcher_close(FeaturesMatcherPtr self);
bool cv_FeaturesMatcher_isThreadSafe(FeaturesMatcher self);
CvStatus* cv_FeaturesMatcher_collectGarbage(FeaturesMatcher self);
// --- estimator (cv::detail::Estimator) ---
// `is_focals_estimated` is only read by STITCHING_ESTIMATOR_HOMOGRAPHY.
CvStatus* cv_Estimator_create(int type, bool is_focals_estimated, Estimator* rval);
void cv_Estimator_close(EstimatorPtr self);
// --- bundle adjuster (cv::detail::BundleAdjusterBase) ---
CvStatus* cv_BundleAdjuster_create(int type, BundleAdjuster* rval);
void cv_BundleAdjuster_close(BundleAdjusterPtr self);
double cv_BundleAdjuster_get_confThresh(BundleAdjuster self);
void cv_BundleAdjuster_set_confThresh(BundleAdjuster self, double val);
// 3x3 CV_8U mask marking which intrinsics the adjuster is allowed to refine
// (fx, skew, ppx / ., fy, ppy / ., ., .); non-zero means refine. Pinning the
// principal point and aspect is what stabilises a fixed-lens rig.
CvStatus* cv_BundleAdjuster_get_refinementMask(BundleAdjuster self, Mat rval, CvCallback_0 callback);
CvStatus* cv_BundleAdjuster_set_refinementMask(BundleAdjuster self, Mat mask);
TermCriteria cv_BundleAdjuster_get_termCriteria(BundleAdjuster self);
void cv_BundleAdjuster_set_termCriteria(BundleAdjuster self, TermCriteria val);
// --- exposure compensator (cv::detail::ExposureCompensator) ---
CvStatus* cv_ExposureCompensator_create(int type, ExposureCompensator* rval);
void cv_ExposureCompensator_close(ExposureCompensatorPtr self);
bool cv_ExposureCompensator_get_updateGain(ExposureCompensator self);
void cv_ExposureCompensator_set_updateGain(ExposureCompensator self, bool val);
// The five accessors below exist only on the block-based compensators
// (STITCHING_EXPOSURE_GAIN_BLOCKS / _CHANNELS_BLOCKS) and fail with a
// CvStatus on any other kind.
CvStatus* cv_ExposureCompensator_get_blockSize(ExposureCompensator self, CvSize* rval);
CvStatus* cv_ExposureCompensator_set_blockSize(ExposureCompensator self, CvSize val);
CvStatus* cv_ExposureCompensator_get_nrFeeds(ExposureCompensator self, int* rval);
CvStatus* cv_ExposureCompensator_set_nrFeeds(ExposureCompensator self, int val);
CvStatus* cv_ExposureCompensator_get_nrGainsFilteringIterations(ExposureCompensator self, int* rval);
CvStatus* cv_ExposureCompensator_set_nrGainsFilteringIterations(ExposureCompensator self, int val);
CvStatus* cv_ExposureCompensator_get_similarityThreshold(ExposureCompensator self, double* rval);
CvStatus* cv_ExposureCompensator_set_similarityThreshold(ExposureCompensator self, double val);
// --- seam finder (cv::detail::SeamFinder) ---
// `terminal_cost` and `bad_region_penalty` are only read by the graph-cut kinds.
CvStatus* cv_SeamFinder_create(
    int type, float terminal_cost, float bad_region_penalty, SeamFinder* rval
);
void cv_SeamFinder_close(SeamFinderPtr self);
// --- blender (cv::detail::Blender) ---
CvStatus* cv_Blender_create(int type, bool try_gpu, Blender* rval);
void cv_Blender_close(BlenderPtr self);
// sharpness belongs to the feather blender and numBands to the multi-band one;
// each fails with a CvStatus on the other kinds.
CvStatus* cv_Blender_get_sharpness(Blender self, float* rval);
CvStatus* cv_Blender_set_sharpness(Blender self, float val);
CvStatus* cv_Blender_get_numBands(Blender self, int* rval);
CvStatus* cv_Blender_set_numBands(Blender self, int val);