packages/dartcv/lib/src/g/stitching.g.dart

// coverage:ignore-file
// opencv_dart - OpenCV bindings for Dart language
//    License: Apache-2.0 https://github.com/hybridgroup/gocv/blob/release/LICENSE.txt
// Author: Rainyl
// License: Apache-2.0
// Date: 2024/01/28

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import, unused_element, deprecated_member_use_from_same_package
@ffi.DefaultAsset('package:dartcv4/dartcv.dart')
library;

import 'dart:ffi' as ffi;
import 'package:dartcv4/src/g/types.g.dart' as imp$1;
import 'package:meta/meta.dart' as meta;
import '' as self;

@meta.RecordUse()
@ffi.Native<ffi.Void Function(BlenderPtr)>()
external void cv_Blender_close(
  BlenderPtr self$1,
);

@meta.RecordUse()
@ffi.Native<ffi.Pointer<CvStatus> Function(ffi.Int, ffi.Bool, ffi.Pointer<Blender>)>()
external ffi.Pointer<CvStatus> cv_Blender_create(
  int type,
  bool try_gpu,
  ffi.Pointer<Blender> rval,
);

@meta.RecordUse()
@ffi.Native<ffi.Pointer<CvStatus> Function(Blender, ffi.Pointer<ffi.Int>)>()
external ffi.Pointer<CvStatus> cv_Blender_get_numBands(
  Blender self$1,
  ffi.Pointer<ffi.Int> rval,
);

@meta.RecordUse()
@ffi.Native<ffi.Pointer<CvStatus> Function(Blender, ffi.Pointer<ffi.Float>)>()
external ffi.Pointer<CvStatus> cv_Blender_get_sharpness(
  Blender self$1,
  ffi.Pointer<ffi.Float> rval,
);

@meta.RecordUse()
@ffi.Native<ffi.Pointer<CvStatus> Function(Blender, ffi.Int)>()
external ffi.Pointer<CvStatus> cv_Blender_set_numBands(
  Blender self$1,
  int val,
);

@meta.RecordUse()
@ffi.Native<ffi.Pointer<CvStatus> Function(Blender, ffi.Float)>()
external ffi.Pointer<CvStatus> cv_Blender_set_sharpness(
  Blender self$1,
  double val,
);

@meta.RecordUse()
@ffi.Native<ffi.Void Function(BundleAdjusterPtr)>()
external void cv_BundleAdjuster_close(
  BundleAdjusterPtr self$1,
);

@meta.RecordUse()
@ffi.Native<ffi.Pointer<CvStatus> Function(ffi.Int, ffi.Pointer<BundleAdjuster>)>()
external ffi.Pointer<CvStatus> cv_BundleAdjuster_create(
  int type,
  ffi.Pointer<BundleAdjuster> rval,
);

@meta.RecordUse()
@ffi.Native<ffi.Double Function(BundleAdjuster)>()
external double cv_BundleAdjuster_get_confThresh(
  BundleAdjuster self$1,
);

@meta.RecordUse()
@ffi.Native<ffi.Pointer<CvStatus> Function(BundleAdjuster, Mat, imp$1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_BundleAdjuster_get_refinementMask(
  BundleAdjuster self$1,
  Mat rval,
  imp$1.CvCallback_0 callback,
);

@meta.RecordUse()
@ffi.Native<TermCriteria Function(BundleAdjuster)>()
external TermCriteria cv_BundleAdjuster_get_termCriteria(
  BundleAdjuster self$1,
);

@meta.RecordUse()
@ffi.Native<ffi.Void Function(BundleAdjuster, ffi.Double)>()
external void cv_BundleAdjuster_set_confThresh(
  BundleAdjuster self$1,
  double val,
);

@meta.RecordUse()
@ffi.Native<ffi.Pointer<CvStatus> Function(BundleAdjuster, Mat)>()
external ffi.Pointer<CvStatus> cv_BundleAdjuster_set_refinementMask(
  BundleAdjuster self$1,
  Mat mask,
);

@meta.RecordUse()
@ffi.Native<ffi.Void Function(BundleAdjuster, TermCriteria)>()
external void cv_BundleAdjuster_set_termCriteria(
  BundleAdjuster self$1,
  TermCriteria val,
);

@meta.RecordUse()
@ffi.Native<ffi.Void Function(EstimatorPtr)>()
external void cv_Estimator_close(
  EstimatorPtr self$1,
);

@meta.RecordUse()
@ffi.Native<ffi.Pointer<CvStatus> Function(ffi.Int, ffi.Bool, ffi.Pointer<Estimator>)>()
external ffi.Pointer<CvStatus> cv_Estimator_create(
  int type,
  bool is_focals_estimated,
  ffi.Pointer<Estimator> rval,
);

@meta.RecordUse()
@ffi.Native<ffi.Void Function(ExposureCompensatorPtr)>()
external void cv_ExposureCompensator_close(
  ExposureCompensatorPtr self$1,
);

@meta.RecordUse()
@ffi.Native<ffi.Pointer<CvStatus> Function(ffi.Int, ffi.Pointer<ExposureCompensator>)>()
external ffi.Pointer<CvStatus> cv_ExposureCompensator_create(
  int type,
  ffi.Pointer<ExposureCompensator> rval,
);

@meta.RecordUse()
@ffi.Native<ffi.Pointer<CvStatus> Function(ExposureCompensator, ffi.Pointer<CvSize>)>()
external ffi.Pointer<CvStatus> cv_ExposureCompensator_get_blockSize(
  ExposureCompensator self$1,
  ffi.Pointer<CvSize> rval,
);

@meta.RecordUse()
@ffi.Native<ffi.Pointer<CvStatus> Function(ExposureCompensator, ffi.Pointer<ffi.Int>)>()
external ffi.Pointer<CvStatus> cv_ExposureCompensator_get_nrFeeds(
  ExposureCompensator self$1,
  ffi.Pointer<ffi.Int> rval,
);

@meta.RecordUse()
@ffi.Native<ffi.Pointer<CvStatus> Function(ExposureCompensator, ffi.Pointer<ffi.Int>)>()
external ffi.Pointer<CvStatus> cv_ExposureCompensator_get_nrGainsFilteringIterations(
  ExposureCompensator self$1,
  ffi.Pointer<ffi.Int> rval,
);

@meta.RecordUse()
@ffi.Native<ffi.Pointer<CvStatus> Function(ExposureCompensator, ffi.Pointer<ffi.Double>)>()
external ffi.Pointer<CvStatus> cv_ExposureCompensator_get_similarityThreshold(
  ExposureCompensator self$1,
  ffi.Pointer<ffi.Double> rval,
);

@meta.RecordUse()
@ffi.Native<ffi.Bool Function(ExposureCompensator)>()
external bool cv_ExposureCompensator_get_updateGain(
  ExposureCompensator self$1,
);

@meta.RecordUse()
@ffi.Native<ffi.Pointer<CvStatus> Function(ExposureCompensator, CvSize)>()
external ffi.Pointer<CvStatus> cv_ExposureCompensator_set_blockSize(
  ExposureCompensator self$1,
  CvSize val,
);

@meta.RecordUse()
@ffi.Native<ffi.Pointer<CvStatus> Function(ExposureCompensator, ffi.Int)>()
external ffi.Pointer<CvStatus> cv_ExposureCompensator_set_nrFeeds(
  ExposureCompensator self$1,
  int val,
);

@meta.RecordUse()
@ffi.Native<ffi.Pointer<CvStatus> Function(ExposureCompensator, ffi.Int)>()
external ffi.Pointer<CvStatus> cv_ExposureCompensator_set_nrGainsFilteringIterations(
  ExposureCompensator self$1,
  int val,
);

@meta.RecordUse()
@ffi.Native<ffi.Pointer<CvStatus> Function(ExposureCompensator, ffi.Double)>()
external ffi.Pointer<CvStatus> cv_ExposureCompensator_set_similarityThreshold(
  ExposureCompensator self$1,
  double val,
);

@meta.RecordUse()
@ffi.Native<ffi.Void Function(ExposureCompensator, ffi.Bool)>()
external void cv_ExposureCompensator_set_updateGain(
  ExposureCompensator self$1,
  bool val,
);

@meta.RecordUse()
@ffi.Native<ffi.Void Function(FeaturesFinderPtr)>()
external void cv_FeaturesFinder_close(
  FeaturesFinderPtr self$1,
);

@meta.RecordUse()
@ffi.Native<ffi.Pointer<CvStatus> Function(ffi.Int, ffi.Int, ffi.Pointer<FeaturesFinder>)>()
external ffi.Pointer<CvStatus> cv_FeaturesFinder_create(
  int type,
  int nfeatures,
  ffi.Pointer<FeaturesFinder> rval,
);

@meta.RecordUse()
@ffi.Native<ffi.Void Function(FeaturesMatcherPtr)>()
external void cv_FeaturesMatcher_close(
  FeaturesMatcherPtr self$1,
);

@meta.RecordUse()
@ffi.Native<ffi.Pointer<CvStatus> Function(FeaturesMatcher)>()
external ffi.Pointer<CvStatus> cv_FeaturesMatcher_collectGarbage(
  FeaturesMatcher self$1,
);

@meta.RecordUse()
@ffi.Native<
  ffi.Pointer<CvStatus> Function(
    ffi.Int,
    ffi.Int,
    ffi.Bool,
    ffi.Bool,
    ffi.Float,
    ffi.Int,
    ffi.Int,
    ffi.Double,
    ffi.Pointer<FeaturesMatcher>,
  )
>()
external ffi.Pointer<CvStatus> cv_FeaturesMatcher_create(
  int type,
  int range_width,
  bool full_affine,
  bool try_use_gpu,
  double match_conf,
  int num_matches_thresh1,
  int num_matches_thresh2,
  double matches_confidence_thresh,
  ffi.Pointer<FeaturesMatcher> rval,
);

@meta.RecordUse()
@ffi.Native<ffi.Bool Function(FeaturesMatcher)>()
external bool cv_FeaturesMatcher_isThreadSafe(
  FeaturesMatcher self$1,
);

@meta.RecordUse()
@ffi.Native<
  ffi.Pointer<CvStatus> Function(
    RotationWarper,
    CvSize,
    Mat,
    Mat,
    Mat,
    Mat,
    ffi.Pointer<CvRect>,
    imp$1.CvCallback_0,
  )
>()
external ffi.Pointer<CvStatus> cv_RotationWarper_buildMaps(
  RotationWarper self$1,
  CvSize src_size,
  Mat K,
  Mat R,
  Mat xmap,
  Mat ymap,
  ffi.Pointer<CvRect> rval,
  imp$1.CvCallback_0 callback,
);

@meta.RecordUse()
@ffi.Native<ffi.Void Function(RotationWarperPtr)>()
external void cv_RotationWarper_close(
  RotationWarperPtr self$1,
);

@meta.RecordUse()
@ffi.Native<
  ffi.Pointer<CvStatus> Function(ffi.Int, ffi.Float, ffi.Float, ffi.Float, ffi.Pointer<RotationWarper>)
>()
external ffi.Pointer<CvStatus> cv_RotationWarper_create(
  int type,
  double a,
  double b,
  double scale,
  ffi.Pointer<RotationWarper> rval,
);

@meta.RecordUse()
@ffi.Native<ffi.Float Function(RotationWarper)>()
external double cv_RotationWarper_get_scale(
  RotationWarper self$1,
);

@meta.RecordUse()
@ffi.Native<ffi.Void Function(RotationWarper, ffi.Float)>()
external void cv_RotationWarper_set_scale(
  RotationWarper self$1,
  double val,
);

@meta.RecordUse()
@ffi.Native<
  ffi.Pointer<CvStatus> Function(
    RotationWarper,
    Mat,
    Mat,
    Mat,
    ffi.Int,
    ffi.Int,
    Mat,
    ffi.Pointer<CvPoint>,
    imp$1.CvCallback_0,
  )
>()
external ffi.Pointer<CvStatus> cv_RotationWarper_warp(
  RotationWarper self$1,
  Mat src,
  Mat K,
  Mat R,
  int interp_mode,
  int border_mode,
  Mat dst,
  ffi.Pointer<CvPoint> rval,
  imp$1.CvCallback_0 callback,
);

@meta.RecordUse()
@ffi.Native<
  ffi.Pointer<CvStatus> Function(
    RotationWarper,
    Mat,
    Mat,
    Mat,
    ffi.Int,
    ffi.Int,
    CvSize,
    Mat,
    imp$1.CvCallback_0,
  )
>()
external ffi.Pointer<CvStatus> cv_RotationWarper_warpBackward(
  RotationWarper self$1,
  Mat src,
  Mat K,
  Mat R,
  int interp_mode,
  int border_mode,
  CvSize dst_size,
  Mat dst,
  imp$1.CvCallback_0 callback,
);

@meta.RecordUse()
@ffi.Native<
  ffi.Pointer<CvStatus> Function(
    RotationWarper,
    CvPoint2f,
    Mat,
    Mat,
    ffi.Pointer<CvPoint2f>,
    imp$1.CvCallback_0,
  )
>()
external ffi.Pointer<CvStatus> cv_RotationWarper_warpPoint(
  RotationWarper self$1,
  CvPoint2f pt,
  Mat K,
  Mat R,
  ffi.Pointer<CvPoint2f> rval,
  imp$1.CvCallback_0 callback,
);

@meta.RecordUse()
@ffi.Native<
  ffi.Pointer<CvStatus> Function(
    RotationWarper,
    CvPoint2f,
    Mat,
    Mat,
    ffi.Pointer<CvPoint2f>,
    imp$1.CvCallback_0,
  )
>()
external ffi.Pointer<CvStatus> cv_RotationWarper_warpPointBackward(
  RotationWarper self$1,
  CvPoint2f pt,
  Mat K,
  Mat R,
  ffi.Pointer<CvPoint2f> rval,
  imp$1.CvCallback_0 callback,
);

@meta.RecordUse()
@ffi.Native<
  ffi.Pointer<CvStatus> Function(RotationWarper, CvSize, Mat, Mat, ffi.Pointer<CvRect>, imp$1.CvCallback_0)
>()
external ffi.Pointer<CvStatus> cv_RotationWarper_warpRoi(
  RotationWarper self$1,
  CvSize src_size,
  Mat K,
  Mat R,
  ffi.Pointer<CvRect> rval,
  imp$1.CvCallback_0 callback,
);

@meta.RecordUse()
@ffi.Native<ffi.Void Function(SeamFinderPtr)>()
external void cv_SeamFinder_close(
  SeamFinderPtr self$1,
);

@meta.RecordUse()
@ffi.Native<ffi.Pointer<CvStatus> Function(ffi.Int, ffi.Float, ffi.Float, ffi.Pointer<SeamFinder>)>()
external ffi.Pointer<CvStatus> cv_SeamFinder_create(
  int type,
  double terminal_cost,
  double bad_region_penalty,
  ffi.Pointer<SeamFinder> rval,
);

@meta.RecordUse()
@ffi.Native<ffi.Pointer<CvStatus> Function(Stitcher, ffi.Pointer<VecCameraParams>, imp$1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_Stitcher_cameras(
  Stitcher self$1,
  ffi.Pointer<VecCameraParams> rval,
  imp$1.CvCallback_0 callback,
);

@meta.RecordUse()
@ffi.Native<ffi.Void Function(StitcherPtr)>()
external void cv_Stitcher_close(
  StitcherPtr stitcher,
);

@meta.RecordUse()
@ffi.Native<ffi.Pointer<CvStatus> Function(Stitcher, ffi.Pointer<VecI32>, imp$1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_Stitcher_component(
  Stitcher self$1,
  ffi.Pointer<VecI32> rval,
  imp$1.CvCallback_0 callback,
);

@meta.RecordUse()
@ffi.Native<ffi.Pointer<CvStatus> Function(Stitcher, Mat, ffi.Pointer<ffi.Int>, imp$1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_Stitcher_composePanorama(
  Stitcher self$1,
  Mat rpano,
  ffi.Pointer<ffi.Int> rval,
  imp$1.CvCallback_0 callback,
);
